--- a/main.css
+++ b/main.css
@@ -1,9 +1,18 @@
 .button {
-	-fx-border-radius: 0;
+    -fx-border-radius: 0;
     -fx-background-radius: 0;
     -fx-padding: 20;
     -fx-width: 60;
     -fx-cursor: hand;
+}
+
+.menu-bar > .container > .menu-button {
+    -fx-padding: 10px 20px;
+    -fx-cursor: hand;
+}
+
+#toggle {
+    -fx-pref-width: 80px;
 }
 
 .text-field {
@@ -18,4 +27,29 @@
     -fx-faint-focus-color: -fx-control-inner-background;
     -fx-text-box-border: -fx-control-inner-background;
     -fx-border-width: -1;
+}
+
+.text-field .placeholder .label  {
+    -fx-text-fill: linen;
+     -fx-font-family: 'serif';
+     -fx-font-size: 1.666em;
+     -fx-font-weight: bold;
+}
+
+#main-content VBox Text {
+    -fx-font-size: 10; 
+    -fx-fill:white;
+}
+
+#main-content VBox {
+    -fx-background-color: rgba(0, 0, 0, 0.6); 
+    -fx-padding: 3px;
+}
+
+#overlay {
+    -fx-background-color: rgba(0, 0, 0, 0.5);
+}
+
+.progress-bar .progress-indicator, .progress-indicator {
+    -fx-progress-color: grey;
 }
